<resources>
    <string name="app_name">Depo Project</string>
    <string name="hint_enter_email">İstifadəçi Adı</string>
    <string name="hint_enter_password">Şifrə</string>
    <string name="button_sign_in">Daxil ol</string>
    <string name="textView_create_new_account">Hesabınız yoxdur? Burada qeydiyyatdan keçin!</string>
    <string name="todo">TODO</string>
    <string name="error_check_internet">Xəta baş verdi. İnterneti yoxlayın!</string>
    <string name="ok">Yaxşı</string>
    <string name="cancel">Ləğv et</string>
    <string name="write_permission_denied">Yaddaşa Yazma İcazəsi Verilmədi!</string>
    <string name="read_permission_denied">Yaddaşdan Oxuma İcazəsi Verilmədi!</string>
    <string name="maybe_profile_data_wrong">Hesab açılarkən xəta baş verdi. Hesab məlumatı səhv ola bilər</string>
    <string name="enter_email">Doğru istifadəçi adını daxil edin (uzunluq > 4)</string>
    <string name="enter_password">Doğru Şifrəni daxil edin (uzunluq > 7)</string>
    <string name="incorrect_email">Xəta baş verdi. Hesab məlumatlarını və ya İnternet əlaqəsini yoxlayın!</string>
    <string name="password_not_matched">Şifrə uyğun deyil</string>
    <string name="data_loading">Məlumat yüklənir</string>
    <string name="button_next">Növbəti</string>
    <string name="hint_reenter_password">Şifrəni təkrarlayın</string>
    <string name="radioButtonSeller">Ekspertr</string>
    <string name="radioButtonDepo">Depo</string>
    <string name="registration">Qeydiyyat</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="phone_number">Telefon Nömrəsi</string>
    <string name="register">Qeydiyyatdan Keç</string>
    <string name="enter_name">Adı daxil edin</string>
    <string name="enter_surname">Soyadı daxil edin</string>
    <string name="enter_phone_number">Telefon Nömrənsini daxil edin</string>
    <string name="registering">Qeydiyyatdan keçilir…</string>
    <string name="products">Məhsullar</string>
    <string name="markets">Marketlər</string>
    <string name="expenses">Xərclər</string>
    <string name="search">Axtar</string>
    <string name="save">Yadda saxla</string>
    <string name="delete">Sil</string>
    <string name="log_out">Çıxış</string>
    <string name="about_us">Haqqımızda</string>
    <string name="open">Aç</string>
    <string name="close">Bağla</string>
    <string name="sells">Satışlar</string>
    <string name="profits">Gəlirlər</string>
    <string name="begin_date">begin_date</string>
    <string name="end_date">end_date</string>
    <string name="profit">Gəlir</string>
    <string name="calculate">Hesabla</string>
    <string name="textures">Fakturalar</string>
    <string name="note">Qeyd et</string>
    <string name="backup">Yedəkləmə</string>
    <string name="history">Tarixçə</string>
    <string name="basket">Səbət</string>
    <string name="statistics">Statistika</string>
    <string name="sellers">Satıcılar</string>
    <string name="about">Bu proqram təminatı TexEl group tərəfindən hazırlanmışdır və depoların o cümlədən ekspertrların işini asanlaşdırmaq üçün nəzərdə tutulmuşdur.<br /><br />"TexEl Group" olaraq istənilən iş yerlərinin işini bir mobil app və ya web səhifəsi ( kompüter)  vasitəsi ilə asanlaşdıra və sürətli idarə olunan edə bilərik.</string>
    <string name="create_new_account">Hesab Yarat</string>
    <string name="deleted_user">Silinmiş İstifadəçi</string>
    <string name="deleted_market">Silinmiş Market</string>
    <string name="users">İstifadəçilər</string>
    <string name="buys">Alışlar</string>
    <string name="new_buy">Yeni Alış</string>
    <string name="percents">Faizlər</string>
    <string name="percent">Faiz</string>
    <string name="buyer">Alıcı</string>
    <string name="fabrics">Zavodlar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_product">Geri alım</string>
    <string name="buy">Al</string>
    <string name="give_back">Qaytar</string>
    <string name="debts">Borclar</string>
    <string name="returns">Geri alımlar</string>
    <string name="returns_to_depo">İadələr</string>
</resources>