<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_markets"
            android:icon="@drawable/ic_market_white"
            android:title="@string/markets" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_list_white"
            android:title="@string/products" />

        <item
            android:id="@+id/nav_fabrics"
            android:icon="@drawable/ic_fabric_white"
            android:title="@string/fabrics" />

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup_white"
            android:title="@string/backup" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_white"
            android:title="@string/users" />

        <item
            android:id="@+id/nav_create_user"
            android:icon="@drawable/ic_add_white"
            android:title="@string/create_new_account" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_white"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out_white"
            android:title="@string/log_out" />
    </group>
</menu>
