<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <RelativeLayout
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/begin_date"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/end_date"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/imageButtonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_refresh_white" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_layout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_search_white"
        android:drawableLeft="@drawable/ic_search_white"
        android:drawablePadding="10dp"
        android:hint="@string/search"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:id="@+id/linearProfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearch"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Satış: "
                android:textColor="@color/divider"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profit"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xalis: "
                android:textColor="@color/divider"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profit"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <include layout="@layout/have_not_item_textview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearProfit"
        android:layout_margin="10dp" />
</RelativeLayout>